--- a/donate.html
+++ b/donate.html
@@ -58,10 +58,9 @@
           <div class="close-bar-1"></div>
           <div class="close-bar-2"></div>
         </div>
-        <a href="#" class="sidebar-navlink w-nav-link">Mask</a>
-        <a href="#" class="sidebar-navlink w-nav-link">Helmet</a>
-        <a href="#" class="sidebar-navlink w-nav-link">Bottle</a>
-        <a href="#" class="sidebar-navlink w-nav-link">Accessories</a>
+        <a href="donate.html" class="sidebar-navlink w-nav-link">On-Chain BTC Donation</a>
+        <a href="https://github.com/satoshiops/airlift-airwaves" target="_blank" class="sidebar-navlink w-nav-link">PGP Keys</a>
+        <a href="https://github.com/satoshiops/airlift-airwaves" target="_blank" class="sidebar-navlink w-nav-link">Proof of Work</a>
       </nav>
       <div id="w-node-_2810f166-8cd6-a511-b913-84b8cecb2ebb-f8b26988" class="nav-menu-wrapper">
         <a href="donate.html" aria-current="page" class="navlink hide-mobile w-nav-link w--current">On-Chain BTC Donation</a>
