--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
   <div class="content">
     <div data-w-id="21707375-c5f5-07d9-f418-f8f064ea4024" class="first-section">
       <div data-w-id="9e77ab9a-3d4b-c2eb-7093-dae6cebbed1e" class="full-red-container"></div>
-      <a href="#" class="hero-button">Donate Now - ⚡</a>
+      <a href="donate.html" class="hero-button">Donate Now - ⚡</a>
       <div class="container">
         <div data-w-id="3729dc46-f59d-bf79-ffcf-dbb3d0b58b33" class="product">
           <a href="https://github.com/satoshiops/airlift-airwaves" target="_blank" class="link">@satoshiops</a><span class="red"></span>
