--- a/donate.html
+++ b/donate.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Wed Jan 26 2022 04:40:12 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Wed Jan 26 2022 05:07:14 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="61f0c5b8890ad98cf8b26988" data-wf-site="61f07f8bb29a8f07f5be4d57">
 <head>
   <meta charset="utf-8">
@@ -18,7 +18,7 @@
   <link href="css/airliftairwaves.webflow.css" rel="stylesheet" type="text/css">
   <style>@media (min-width:992px) {html.w-mod-js:not(.w-mod-ix) [data-w-id="74a6a385-dafa-9443-9d98-6249f4fbca6d"] {-webkit-transform:translate3d(0, -100%, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, -100%, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, -100%, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, -100%, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);}html.w-mod-js:not(.w-mod-ix) [data-w-id="79b5b226-ace5-00e7-36ec-53ef61734ad5"] {opacity:0;-webkit-transform:translate3d(0, 50px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 50px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 50px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 50px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);}html.w-mod-js:not(.w-mod-ix) [data-w-id="9e77ab9a-3d4b-c2eb-7093-dae6cebbed1e"] {display:block;}}</style>
   <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js" type="text/javascript"></script>
-  <script type="text/javascript">WebFont.load({  google: {    families: ["Merriweather:300,300italic,400,400italic,700,700italic,900,900italic","Droid Sans:400,700","Inconsolata:400,700"]  }});</script>
+  <script type="text/javascript">WebFont.load({  google: {    families: ["Merriweather:300,300italic,400,400italic,700,700italic,900,900italic","Inconsolata:400,700"]  }});</script>
   <!-- [if lt IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js" type="text/javascript"></script><![endif] -->
   <script type="text/javascript">!function(o,c){var n=c.documentElement,t=" w-mod-";n.className+=t+"js",("ontouchstart"in o||o.DocumentTouch&&c instanceof DocumentTouch)&&(n.className+=t+"touch")}(window,document);</script>
   <link href="images/favicon.png" rel="shortcut icon" type="image/x-icon">
@@ -58,9 +58,10 @@
           <div class="close-bar-1"></div>
           <div class="close-bar-2"></div>
         </div>
-        <a href="donate.html" class="sidebar-navlink w-nav-link">On-Chain BTC Donation</a>
-        <a href="https://github.com/satoshiops/airlift-airwaves" target="_blank" class="sidebar-navlink w-nav-link">PGP Keys</a>
-        <a href="https://github.com/satoshiops/airlift-airwaves" target="_blank" class="sidebar-navlink w-nav-link">Proof of Work</a>
+        <a href="#" class="sidebar-navlink w-nav-link">Mask</a>
+        <a href="#" class="sidebar-navlink w-nav-link">Helmet</a>
+        <a href="#" class="sidebar-navlink w-nav-link">Bottle</a>
+        <a href="#" class="sidebar-navlink w-nav-link">Accessories</a>
       </nav>
       <div id="w-node-_2810f166-8cd6-a511-b913-84b8cecb2ebb-f8b26988" class="nav-menu-wrapper">
         <a href="donate.html" aria-current="page" class="navlink hide-mobile w-nav-link w--current">On-Chain BTC Donation</a>
