--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 <body>
   <div class="fixed-card-floating">
     <h3 class="heading-3">#btc4tonga</h3><img src="images/btc.svg" loading="lazy" height="80" alt="" class="image-5">
-    <a href="#" class="card-button">Donate Now</a>
+    <a href="donate.html" class="card-button">Donate Now</a>
   </div>
   <div data-collapse="all" data-animation="over-left" data-duration="400" data-easing="ease" data-easing2="ease" role="banner" class="navbar w-nav">
     <div data-w-id="74a6a385-dafa-9443-9d98-6249f4fbca6d" class="navbar-container">
