--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Wed Jan 26 2022 05:07:14 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Sun Jan 30 2022 23:12:17 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="61f08e21744d15b4bddf2dc5" data-wf-site="61f07f8bb29a8f07f5be4d57">
 <head>
   <meta charset="utf-8">
@@ -10,7 +10,7 @@
   <link href="css/normalize.css" rel="stylesheet" type="text/css">
   <link href="css/webflow.css" rel="stylesheet" type="text/css">
   <link href="css/airliftairwaves.webflow.css" rel="stylesheet" type="text/css">
-  <style>@media (min-width:992px) {html.w-mod-js:not(.w-mod-ix) [data-w-id="3729dc46-f59d-bf79-ffcf-dbb3d0b58b33"] {-webkit-transform:translate3d(0, 210px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 210px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 210px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 210px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);}html.w-mod-js:not(.w-mod-ix) [data-w-id="74a6a385-dafa-9443-9d98-6249f4fbca6d"] {-webkit-transform:translate3d(0, -100%, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, -100%, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, -100%, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, -100%, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);}html.w-mod-js:not(.w-mod-ix) [data-w-id="79b5b226-ace5-00e7-36ec-53ef61734ad5"] {opacity:0;-webkit-transform:translate3d(0, 50px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 50px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 50px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 50px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);}html.w-mod-js:not(.w-mod-ix) [data-w-id="9e77ab9a-3d4b-c2eb-7093-dae6cebbed1e"] {display:block;}}</style>
+  <style>@media (min-width:992px) {html.w-mod-js:not(.w-mod-ix) [data-w-id="3729dc46-f59d-bf79-ffcf-dbb3d0b58b33"] {-webkit-transform:translate3d(0, 210px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 210px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 210px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 210px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);}html.w-mod-js:not(.w-mod-ix) [data-w-id="79b5b226-ace5-00e7-36ec-53ef61734ad5"] {opacity:0;-webkit-transform:translate3d(0, 50px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 50px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 50px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 50px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);}html.w-mod-js:not(.w-mod-ix) [data-w-id="9e77ab9a-3d4b-c2eb-7093-dae6cebbed1e"] {display:block;}}</style>
   <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js" type="text/javascript"></script>
   <script type="text/javascript">WebFont.load({  google: {    families: ["Merriweather:300,300italic,400,400italic,700,700italic,900,900italic","Inconsolata:400,700"]  }});</script>
   <!-- [if lt IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js" type="text/javascript"></script><![endif] -->
@@ -41,26 +41,26 @@
     <a href="donate.html" class="card-button">Donate Now</a>
   </div>
   <div data-collapse="all" data-animation="over-left" data-duration="400" data-easing="ease" data-easing2="ease" role="banner" class="navbar w-nav">
-    <div data-w-id="74a6a385-dafa-9443-9d98-6249f4fbca6d" class="navbar-container">
-      <div id="w-node-d79bc69f-574e-932f-d409-0d9e29655f37-bddf2dc5" class="nav-left-wrapper">
-        <a href="#" class="w-nav-brand"><img src="images/btc-relief-logo.svg" loading="lazy" width="37" id="w-node-a8b3cbb7-0b98-0d00-c8c8-8b9120ee5670-bddf2dc5" alt="" class="image-8"></a>
+    <div data-w-id="2ea186b4-8bcc-de7c-f46a-f73756ef36e0" class="navbar-container">
+      <div id="w-node-_2ea186b4-8bcc-de7c-f46a-f73756ef36e1-56ef36df" class="nav-left-wrapper">
+        <a href="index.html" aria-current="page" class="w-nav-brand w--current"><img src="images/btc-relief-logo.svg" loading="lazy" width="37" id="w-node-_2ea186b4-8bcc-de7c-f46a-f73756ef36e3-56ef36df" alt="" class="image-8"></a>
         <div class="menu-button w-nav-button">
           <div class="icon w-icon-nav-menu"></div>
         </div>
       </div>
-      <nav role="navigation" id="w-node-da678f6f-32d8-d365-df81-6720deed8908-bddf2dc5" class="sidebar-menu w-nav-menu">
+      <nav role="navigation" id="w-node-_2ea186b4-8bcc-de7c-f46a-f73756ef36e6-56ef36df" class="sidebar-menu w-nav-menu">
         <div class="sidebar-button w-nav-button">
           <div class="close-bar-1"></div>
           <div class="close-bar-2"></div>
         </div>
-        <a href="donate.html" class="sidebar-navlink w-nav-link">On-Chain BTC Donation</a>
+        <a href="donate.html" class="sidebar-navlink w-nav-link">On-Chain BTC Donation</a>
         <a href="https://github.com/satoshiops/airlift-airwaves" target="_blank" class="sidebar-navlink w-nav-link">PGP Keys</a>
-        <a href="https://github.com/satoshiops/airlift-airwaves" target="_blank" class="sidebar-navlink w-nav-link">Proof of Work</a>
+        <a href="proof-of-work.html" class="sidebar-navlink w-nav-link">Proof of Work</a>
       </nav>
-      <div id="w-node-_2810f166-8cd6-a511-b913-84b8cecb2ebb-bddf2dc5" class="nav-menu-wrapper">
+      <div id="w-node-_2ea186b4-8bcc-de7c-f46a-f73756ef36f0-56ef36df" class="nav-menu-wrapper">
         <a href="donate.html" class="navlink hide-mobile w-nav-link">On-Chain BTC Donation</a>
+        <a href="proof-of-work.html" class="navlink hide-mobile w-nav-link">Proof of Work</a>
         <a href="https://github.com/satoshiops/airlift-airwaves" target="_blank" class="navlink hide-mobile w-nav-link">PGP Keys</a>
-        <a href="https://github.com/satoshiops/airlift-airwaves" target="_blank" class="navlink hide-mobile w-nav-link">Proof of Work</a>
       </div>
     </div>
   </div>
@@ -83,7 +83,7 @@
       <div class="container">
         <div class="circle-content-wrapper">
           <div class="image-cirlce-wrapper">
-            <div data-w-id="859af26c-2676-9927-e21c-08a94f9868ca" class="rotate-wrapper"><img src="images/tonga_1.jpg" loading="lazy" sizes="(max-width: 767px) 90vw, 500px" srcset="images/tonga_1-p-500.jpeg 500w, images/tonga_1-p-800.jpeg 800w, images/tonga_1.jpg 834w" alt=""></div>
+            <div data-w-id="859af26c-2676-9927-e21c-08a94f9868ca" class="rotate-wrapper"><img src="images/tonga_1.jpg" loading="lazy" sizes="100vw" srcset="images/tonga_1-p-500.jpeg 500w, images/tonga_1-p-800.jpeg 800w, images/tonga_1.jpg 834w" alt=""></div>
             <div class="image-circle"><img src="images/tonga.jpg" loading="lazy" sizes="(max-width: 479px) 200px, (max-width: 767px) 65vw, 350px" srcset="images/tonga-p-500.jpeg 500w, images/tonga-p-800.jpeg 800w, images/tonga-p-1080.jpeg 1080w, images/tonga-p-1600.jpeg 1600w, images/tonga.jpg 1930w" alt="" class="image-7"></div>
           </div>
         </div>
