added blog, changed hf radio image

--- a/proof-of-work.html
+++ b/proof-of-work.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Sun Jan 30 2022 23:12:17 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Mon Jan 31 2022 00:13:57 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="61f70be239f437bd923e6f1f" data-wf-site="61f07f8bb29a8f07f5be4d57">
 <head>
   <meta charset="utf-8">
@@ -59,14 +59,20 @@
         </div>
         <a href="donate.html" class="sidebar-navlink w-nav-link">On-Chain BTC Donation</a>
         <a href="https://github.com/satoshiops/airlift-airwaves" target="_blank" class="sidebar-navlink w-nav-link">PGP Keys</a>
+        <a href="https://blog.airliftairwaves.com" target="_blank" class="sidebar-navlink w-nav-link">Blog</a>
         <a href="proof-of-work.html" aria-current="page" class="sidebar-navlink w-nav-link w--current">Proof of Work</a>
       </nav>
       <div id="w-node-_2ea186b4-8bcc-de7c-f46a-f73756ef36f0-56ef36df" class="nav-menu-wrapper">
         <a href="donate.html" class="navlink hide-mobile w-nav-link">On-Chain BTC Donation</a>
         <a href="proof-of-work.html" aria-current="page" class="navlink hide-mobile w-nav-link w--current">Proof of Work</a>
+        <a href="https://blog.airliftairwaves.com" class="navlink hide-mobile w-nav-link">Blog</a>
         <a href="https://github.com/satoshiops/airlift-airwaves" target="_blank" class="navlink hide-mobile w-nav-link">PGP Keys</a>
       </div>
     </div>
+  </div>
+  <div class="fixed-card-floating">
+    <h3 class="heading-3">#airliftairwaves</h3><img src="images/btc.svg" loading="lazy" height="80" alt="" class="image-5">
+    <a href="donate.html" class="card-button">Donate Now</a>
   </div>
   <div class="content">
     <div data-w-id="21707375-c5f5-07d9-f418-f8f064ea4024" class="first-section">
