--- a/donate.html
+++ b/donate.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Sun Jan 30 2022 23:12:17 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Mon Jan 31 2022 00:13:57 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="61f0c5b8890ad98cf8b26988" data-wf-site="61f07f8bb29a8f07f5be4d57">
 <head>
   <meta charset="utf-8">
@@ -60,11 +60,13 @@
         </div>
         <a href="donate.html" aria-current="page" class="sidebar-navlink w-nav-link w--current">On-Chain BTC Donation</a>
         <a href="https://github.com/satoshiops/airlift-airwaves" target="_blank" class="sidebar-navlink w-nav-link">PGP Keys</a>
+        <a href="https://blog.airliftairwaves.com" target="_blank" class="sidebar-navlink w-nav-link">Blog</a>
         <a href="proof-of-work.html" class="sidebar-navlink w-nav-link">Proof of Work</a>
       </nav>
       <div id="w-node-_2ea186b4-8bcc-de7c-f46a-f73756ef36f0-56ef36df" class="nav-menu-wrapper">
         <a href="donate.html" aria-current="page" class="navlink hide-mobile w-nav-link w--current">On-Chain BTC Donation</a>
         <a href="proof-of-work.html" class="navlink hide-mobile w-nav-link">Proof of Work</a>
+        <a href="https://blog.airliftairwaves.com" class="navlink hide-mobile w-nav-link">Blog</a>
         <a href="https://github.com/satoshiops/airlift-airwaves" target="_blank" class="navlink hide-mobile w-nav-link">PGP Keys</a>
       </div>
     </div>
