--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Sun Jan 30 2022 23:12:17 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Mon Jan 31 2022 00:13:57 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="61f08e21744d15b4bddf2dc5" data-wf-site="61f07f8bb29a8f07f5be4d57">
 <head>
   <meta charset="utf-8">
@@ -37,7 +37,7 @@
 </head>
 <body>
   <div class="fixed-card-floating">
-    <h3 class="heading-3">#btc4tonga</h3><img src="images/btc.svg" loading="lazy" height="80" alt="" class="image-5">
+    <h3 class="heading-3">#airliftairwaves</h3><img src="images/btc.svg" loading="lazy" height="80" alt="" class="image-5">
     <a href="donate.html" class="card-button">Donate Now</a>
   </div>
   <div data-collapse="all" data-animation="over-left" data-duration="400" data-easing="ease" data-easing2="ease" role="banner" class="navbar w-nav">
@@ -55,11 +55,13 @@
         </div>
         <a href="donate.html" class="sidebar-navlink w-nav-link">On-Chain BTC Donation</a>
         <a href="https://github.com/satoshiops/airlift-airwaves" target="_blank" class="sidebar-navlink w-nav-link">PGP Keys</a>
+        <a href="https://blog.airliftairwaves.com" target="_blank" class="sidebar-navlink w-nav-link">Blog</a>
         <a href="proof-of-work.html" class="sidebar-navlink w-nav-link">Proof of Work</a>
       </nav>
       <div id="w-node-_2ea186b4-8bcc-de7c-f46a-f73756ef36f0-56ef36df" class="nav-menu-wrapper">
         <a href="donate.html" class="navlink hide-mobile w-nav-link">On-Chain BTC Donation</a>
         <a href="proof-of-work.html" class="navlink hide-mobile w-nav-link">Proof of Work</a>
+        <a href="https://blog.airliftairwaves.com" class="navlink hide-mobile w-nav-link">Blog</a>
         <a href="https://github.com/satoshiops/airlift-airwaves" target="_blank" class="navlink hide-mobile w-nav-link">PGP Keys</a>
       </div>
     </div>
@@ -83,7 +85,7 @@
       <div class="container">
         <div class="circle-content-wrapper">
           <div class="image-cirlce-wrapper">
-            <div data-w-id="859af26c-2676-9927-e21c-08a94f9868ca" class="rotate-wrapper"><img src="images/tonga_1.jpg" loading="lazy" sizes="100vw" srcset="images/tonga_1-p-500.jpeg 500w, images/tonga_1-p-800.jpeg 800w, images/tonga_1.jpg 834w" alt=""></div>
+            <div data-w-id="859af26c-2676-9927-e21c-08a94f9868ca" class="rotate-wrapper"><img src="images/tonga_1.jpg" loading="lazy" sizes="(max-width: 767px) 90vw, 500px" srcset="images/tonga_1-p-500.jpeg 500w, images/tonga_1-p-800.jpeg 800w, images/tonga_1.jpg 834w" alt=""></div>
             <div class="image-circle"><img src="images/tonga.jpg" loading="lazy" sizes="(max-width: 479px) 200px, (max-width: 767px) 65vw, 350px" srcset="images/tonga-p-500.jpeg 500w, images/tonga-p-800.jpeg 800w, images/tonga-p-1080.jpeg 1080w, images/tonga-p-1600.jpeg 1600w, images/tonga.jpg 1930w" alt="" class="image-7"></div>
           </div>
         </div>
@@ -115,7 +117,7 @@
           <div class="text-block-3">In order to secure our airplane, all equipment and have it prepared to deliver IN TONGA by parachute we need ~$55,000USD in the next 3 days.<br>‍<br>That is currently estimated at $9,800 per flight, we can touch 2 of the main northern islands with one flight operation.  We can reach multiple islands for each flight and deliver 500kg of payload with each airdrop.  This is current capability.</div>
         </div>
       </div>
-      <div id="w-node-_189a08ab-a117-eb4d-81e6-16213281997e-bddf2dc5" class="div-block-7"><img src="images/hf-radio-copy.jpg" loading="lazy" sizes="(max-width: 479px) 92vw, (max-width: 767px) 30vw, (max-width: 991px) 26vw, 33vw" srcset="images/hf-radio-copy-p-500.jpeg 500w, images/hf-radio-copy-p-800.jpeg 800w, images/hf-radio-copy.jpg 1343w" alt="" class="image-3"></div>
+      <div id="w-node-_189a08ab-a117-eb4d-81e6-16213281997e-bddf2dc5" class="div-block-7"><img src="images/hf-radio.jpg" loading="lazy" sizes="(max-width: 479px) 92vw, (max-width: 767px) 30vw, (max-width: 991px) 26vw, 33vw" srcset="images/hf-radio.jpg 500w, images/hf-radio.jpg 800w, images/hf-radio.jpg 1343w" alt="" class="image-3"></div>
     </div>
     <div data-w-id="a94b9ad0-318d-6c81-9d64-516fcd36edcc" class="div-block-5">
       <div style="padding-top:56.17021276595745%" class="w-embed-youtubevideo image-4"><iframe src="https://www.youtube.com/embed/jiOT0fmog3U?rel=0&amp;controls=1&amp;autoplay=0&amp;mute=0&amp;start=0" frameborder="0" style="position:absolute;left:0;top:0;width:100%;height:100%;pointer-events:auto" allow="autoplay; encrypted-media" allowfullscreen="" title="Bitcoin Relief For Tonga - Short Version"></iframe></div>
