small text change

--- a/proof-of-work.html
+++ b/proof-of-work.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Mon Jan 31 2022 00:13:57 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Mon Jan 31 2022 08:42:41 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="61f70be239f437bd923e6f1f" data-wf-site="61f07f8bb29a8f07f5be4d57">
 <head>
   <meta charset="utf-8">
@@ -79,7 +79,7 @@
       <div data-w-id="9e77ab9a-3d4b-c2eb-7093-dae6cebbed1e" class="full-red-container"></div>
       <div class="container">
         <h1 data-w-id="79b5b226-ace5-00e7-36ec-53ef61734ad5" class="donate">Proof of Work<br></h1>
-        <p class="paragraph">We are publishing the receipts of all transactions made with your donations and mission critical Emails.<br>You can verify all the published information <a href="https://github.com/satoshiops/airlift-airwaves" target="_blank" class="link-2">here.</a><br></p>
+        <p class="paragraph">We are publishing all mission critical receipts and emails.<br>You can verify all the published information <a href="https://github.com/satoshiops/airlift-airwaves" target="_blank" class="link-2">here.</a><br></p>
         <div id="components" class="c-sub-section">
           <div class="c-sub-content">
             <section id="gallery" class="gallery wf-section">
